--- a/_posts/0000-01-02-jdu19090.md
+++ b/_posts/0000-01-02-jdu19090.md
@@ -2,5 +2,9 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+# This is a nice header for the slide
+Here is a list of ingredients:
+- milk
+- eggs
+- butter
 Use the left arrow to go back!
