change unordered list to ordered list

--- a/_posts/0000-01-02-jdu19090.md
+++ b/_posts/0000-01-02-jdu19090.md
@@ -4,8 +4,8 @@ title: "Welcome to jdu19090 slide!"
 ---
 # This is my awesome slide
 Here is a list of ingredients:
-- milk
-- eggs
-- butter
-- vanilla
+1. milk
+2. eggs
+3. butter
+4. vanilla
 Use the left arrow to go back!
